--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-authors = ["SilverWingedSeraph <lfstindall@gmail.com>"]
+authors = ["Leo Tindall <lfstindall@gmail.com>"]
 name = "sbic"
-version = "0.1.0"
+version = "0.2.0"
+
 [dependencies]
 sbrain = "^0.4"
-serde = "^1"
-serde_derive = "^1"
-toml = "^0.4"
+
+clap = "2"
